# state-machine_op-subj

./: .editorconfig  CMakeLists.txt  Main.cpp  Operation.cpp  Operation.h  Subject.cpp  Subject.h
sm/: StateMachine.cpp  xallocator.cpp
